--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -274,11 +274,24 @@
             <scope>test</scope>
         </dependency>
 
+        <!--  -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>9.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+        <!--  -->
+
     </dependencies>
 
 
     <build>
-        <finalName>railwayApp</finalName>
+        <finalName>railway</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
@@ -333,7 +346,4 @@
             </plugins>
         </pluginManagement>
     </build>
-</project>
-
-
 </project>
