--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -217,6 +217,16 @@
         </dependency>
         <!--  -->
 
+
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat-maven-plugin -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.tomcat.maven</groupId>-->
+            <!--<artifactId>tomcat-maven-plugin</artifactId>-->
+            <!--<version>2.2</version>-->
+            <!--<type>pom</type>-->
+        <!--</dependency>-->
+
+
     </dependencies>
 
 
@@ -261,6 +271,24 @@
                         <target>${jdk.version}</target>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+
+                        <configuration>
+                            <url>http://localhost:8080/manager/text</url>
+                            <path>/</path>
+                            <server>TomcatServer</server>
+                            <username>admin</username>
+                            <password>admin</password>
+                            <update>true</update>
+                        </configuration>
+
+                </plugin>
+
+
             </plugins>
         </pluginManagement>
     </build>
