--- a/MetroInformator/src/main/resources/application.properties
+++ b/MetroInformator/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName= com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/testbase?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+jdbc.url=jdbc:mysql://localhost:3306/testbase?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow&&useSSL=false
 jdbc.username=root
 jdbc.password=admin
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
