--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -270,6 +270,7 @@
                     <configuration>
                         <source>${jdk.version}</source>
                         <target>${jdk.version}</target>
+                        <compilerArgument>-Xlint:none</compilerArgument>
                     </configuration>
                 </plugin>
 
