--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -176,6 +176,30 @@
             <scope>test</scope>
         </dependency>
 
+        <!--ModelMapper-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <!---JMS+RABBIT MQ-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>5.1.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.0.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>2.0.6.RELEASE</version>
+        </dependency>
+
         <!--  -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -241,7 +265,7 @@
                     <version>2.2</version>
 
                     <configuration>
-                        <url>http://localhost:8080/manager/text</url>
+                        <url>http://localhost:8000/manager/text</url>
                         <path>/</path>
                         <server>TomcatServer</server>
                         <username>admin</username>
