--- a/MetroInformatorBoard/pom.xml
+++ b/MetroInformatorBoard/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>2.0.0</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
@@ -97,7 +97,7 @@
     </dependencies>
 
     <build>
-        <finalName>boardRailway</finalName>
+        <finalName>MetroInformatorBoard</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
@@ -139,6 +139,11 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.2.2.Final</version>
             </plugin>
         </plugins>
     </build>
