--- a/MetroInformatorBoard/src/main/webapp/WEB-INF/web.xml
+++ b/MetroInformatorBoard/src/main/webapp/WEB-INF/web.xml
@@ -42,4 +42,9 @@
         <param-name>com.sun.faces.enableRestoreView11Compatibility</param-name>
         <param-value>true</param-value>
     </context-param>
+
+    <context-param>
+        <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+        <param-value>true</param-value>
+    </context-param>
 </web-app>
