--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -268,6 +268,37 @@
 
                 </plugin>
 
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.5.0.1254</version>
+                </plugin>
+
+
+                <!--<plugin>-->
+                    <!--<groupId>com.spotify</groupId>-->
+                    <!--<artifactId>docker-maven-plugin</artifactId>-->
+                    <!--<executions>-->
+                        <!--<execution>-->
+                            <!--<phase>install</phase>-->
+                            <!--<goals>-->
+                                <!--<goal>build</goal>-->
+                            <!--</goals>-->
+                        <!--</execution>-->
+                    <!--</executions>-->
+                    <!--<configuration>-->
+                        <!--<imageName>${project.build.finalName}:${project.version}-->
+                        <!--</imageName>-->
+                        <!--<baseImage>mywebserver</baseImage>-->
+                        <!--<resources>-->
+                            <!--<resource>-->
+                                <!--<targetPath>/usr/local/tomcat/webapps/</targetPath>-->
+                                <!--<directory>${project.basedir}/target/</directory>-->
+                                <!--<include>${project.build.finalName}.war</include>-->
+                            <!--</resource>-->
+                        <!--</resources>-->
+                    <!--</configuration>-->
+                <!--</plugin>-->
 
             </plugins>
         </pluginManagement>
