--- a/MetroInformator/src/main/resources/application.properties
+++ b/MetroInformator/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/testbase?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow&&useSSL=false
 jdbc.username=root
-jdbc.password=admin
+jdbc.cred=admin
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
