--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -205,6 +205,14 @@
             <version>3.23.1-GA</version>
         </dependency>
 
+        <!--MOCKITO + SELENIUM-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
