--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -224,6 +224,17 @@
             <version>2.53.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jcabi</groupId>
+            <artifactId>jcabi-log</artifactId>
+            <version>0.17.1</version>
+        </dependency>
 
     </dependencies>
 
@@ -297,31 +308,6 @@
                     <version>3.5.0.1254</version>
                 </plugin>
 
-
-                <!--<plugin>-->
-                    <!--<groupId>com.spotify</groupId>-->
-                    <!--<artifactId>docker-maven-plugin</artifactId>-->
-                    <!--<executions>-->
-                        <!--<execution>-->
-                            <!--<phase>install</phase>-->
-                            <!--<goals>-->
-                                <!--<goal>build</goal>-->
-                            <!--</goals>-->
-                        <!--</execution>-->
-                    <!--</executions>-->
-                    <!--<configuration>-->
-                        <!--<imageName>${project.build.finalName}:${project.version}-->
-                        <!--</imageName>-->
-                        <!--<baseImage>mywebserver</baseImage>-->
-                        <!--<resources>-->
-                            <!--<resource>-->
-                                <!--<targetPath>/usr/local/tomcat/webapps/</targetPath>-->
-                                <!--<directory>${project.basedir}/target/</directory>-->
-                                <!--<include>${project.build.finalName}.war</include>-->
-                            <!--</resource>-->
-                        <!--</resources>-->
-                    <!--</configuration>-->
-                <!--</plugin>-->
 
             </plugins>
         </pluginManagement>
