--- a/MetroInformator/src/main/resources/log4j.properties
+++ b/MetroInformator/src/main/resources/log4j.properties
@@ -8,3 +8,11 @@ log4j.appender.Appender2.File=C:/MetroInformatorLogs/MetroInformator.log
 log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
 
+
+#log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+#log4j.appender.CONSOLE.layout=com.jcabi.log.MulticolorLayout
+#log4j.appender.CONSOLE.layout.ConversionPattern=[%color{%p}] %c: %m%n
+#
+#log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
+#log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
+#log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
