--- a/MetroInformator/src/test/resources/application.properties
+++ b/MetroInformator/src/test/resources/application.properties
@@ -5,3 +5,6 @@ jdbc.cred=admin
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+
+
+#com.mysql.cj.jdbc.Driver
