--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -232,6 +232,22 @@
 
         <!-- https://mvnrepository.com/artifact/org.testcontainers/mysql -->
         <!-- https://mvnrepository.com/artifact/org.testcontainers/testcontainers -->
+        <!-- https://mvnrepository.com/artifact/org.testcontainers/testcontainers -->
+        <!--<dependency>-->
+            <!--<groupId>org.testcontainers</groupId>-->
+            <!--<artifactId>testcontainers</artifactId>-->
+            <!--<version>1.9.1</version>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.testcontainers/mysql &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.testcontainers</groupId>-->
+            <!--<artifactId>mysql</artifactId>-->
+            <!--<version>1.9.1</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+
+
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 
