--- a/MetroInformator/pom.xml
+++ b/MetroInformator/pom.xml
@@ -4,8 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.jschool.apocmetro</groupId>
+    <parent>
+        <groupId>ru.jschool.apocmetro</groupId>
+        <artifactId>multiapp</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+
     <artifactId>MetroInformator</artifactId>
+    <name>MetroInformator</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -230,6 +237,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>ru.jschool.apocmetro</groupId>
+            <artifactId>MetroDTO</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.testcontainers/mysql -->
         <!-- https://mvnrepository.com/artifact/org.testcontainers/testcontainers -->
         <!-- https://mvnrepository.com/artifact/org.testcontainers/testcontainers -->
@@ -247,6 +260,12 @@
             <!--<scope>test</scope>-->
         <!--</dependency>-->
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
 
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
@@ -258,7 +277,7 @@
 
 
     <build>
-        <finalName>ApocalypticSubway</finalName>
+        <finalName>MetroInformator</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
@@ -298,6 +317,25 @@
                     </executions>
                 </plugin>
 
+                <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>client</classifier>
+                            <includes>
+                                <include>**/dto/*</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+                </plugin>
 
                 <plugin>
                     <artifactId>maven-war-plugin</artifactId>
