--- a/MetroInformatorBoard/pom.xml
+++ b/MetroInformatorBoard/pom.xml
@@ -4,12 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.jschool.apocmetro</groupId>
+    <parent>
+        <groupId>ru.jschool.apocmetro</groupId>
+        <artifactId>multiapp</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>MetroInformatorBoard</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <name>MetroInformatorBoard</name>
     <packaging>war</packaging>
 
-    <name>MetroInformatorBoard</name>
+
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -89,6 +94,13 @@
             <artifactId>javax.ejb-api</artifactId>
             <version>3.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>ru.jschool.apocmetro</groupId>
+            <artifactId>MetroDTO</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
